--- a/css/style.css
+++ b/css/style.css
@@ -258,11 +258,336 @@ article img {
     margin-top: 2rem;
 }
 
-@media (min-width: 48rem) {
+.carousel,
+.carousel-item,
+.carousel-item-hidden {
+    display: none;
+}
 
+.carousel,
+.carousel-item-visible {
+    display: block;
+    animation: fadeVisibility 0.5s ease-in-out;
+}
+
+.carousel,
+.carousel-item img {
+    max-width: 37.5rem;
+    width: 100%;
+    height: auto;
+}
+
+.carousel-item-hidden {
+    display: none;
+}
+
+@keyframes fadeVisibility {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+.arrow {
+     background-color: #000;
+     padding: 1.5rem;
+     display: inline;
+     border-radius: 50%;
+     margin: 2rem 0.5rem 0 0.5rem;
+}
+
+.arrow:hover {
+    background: #755cde;
+    cursor: pointer;
+}
+
+.contact {
+    text-align: center;
+    background: #030303;
+    border-radius: .625rem;
+    color: #fff7f0;
+    padding: 3rem 1.5rem;
+    margin-top: 6.25rem;
+}
+
+.contact h3 {
+    font-size: 6.25rem;
+}
+
+.contact p {
+    padding-block: 1.5rem;
+}
+
+footer {
+    margin-top: 2.5rem;
+}
+
+
+
+
+@media (min-width: 48rem) {
+    body {
+        margin: 2.4375rem;
+    }
+
+    header,
+    footer,
+    .skills,
+    .profile,
+    .work,
+    .contact {
+        margin: 0 auto;
+        max-width: 37.5rem;
+    }
+
+    .hero h1 {
+        font-size: 2.75rem;
+        line-height: 3.465rem;
+        margin-top: 4rem;
+    }
+
+    .hero p {
+        font-size: 1.125rem;
+        line-height: 1.75rem;
+        margin-top: 1.675rem;
+    }
+
+    .skills {
+        margin-top: 5rem;
+    }
+
+    .upper-skills,
+    .lower-skills {
+        display: flex;
+        flex-direction: row;
+        gap: 1.5rem;
+    }
+
+    .skill-one {
+        width: 20.8125rem;
+    }
+
+    .skill-two {
+        width: 9.6875rem;
+    }
+
+    .skill-three {
+        width: 9.6875rem;
+    }
+
+    .skill-four {
+        width: 20.8125rem;
+    }
+
+    .skill-five {
+        width: 20.8125rem;
+    }
+
+    .skill-six {
+        width: 20.8125rem;
+    }
+
+    .profile {
+        display: flex;
+        gap: 2.3rem;
+        margin-top: 7.5rem;
+    }
+
+    .amy-image {
+        width: 22.75rem;
+        position: relative;
+        right: 6.25rem;
+    }
+
+    .profile-info {
+        text-align: left;
+    }
+
+    .profile-info h2 {
+        font-size: 2rem;
+        line-height: 2.52rem;
+    }
+
+    .profile-info p {
+        margin-block: 1.5rem;
+        font-size: 1.125rem;
+    }
+
+    .work {
+        margin-top: 7.5rem;
+    }
+
+    .work h3 {
+        font-size: 2rem;
+    }
+
+    .carousel {
+        margin-top: 1.5rem;
+        max-width: 33.75rem;
+    }
+
+    .arrow {
+        margin-top: 1.5rem;
+    }
+
+    .contact {
+        padding: 3.5rem 4.6875rem;
+        margin-top: 7.5rem;
+    }
+
+    .contact h3 {
+        font-size: 2rem;
+    }
+
+    .contact p {
+        font-size: 1.125rem;
+    }
+
+    .btn-contact {
+        font-size: 1.625rem;
+    }
+
+    footer {
+        margin-top: 3.5rem;
+    }
 }
 
 @media (min-width: 75rem) {
+    header,
+    footer,
+    .skills,
+    .profile,
+    .work,
+    .contact {
+        margin-inline: 10.3125rem;
+        margin: 0 auto;
+        max-width: 62.5rem;
+    }
 
+    .hero h1 {
+        font-size: 3.5rem;
+        line-height: 4.41rem;
+        margin-top: 4.125rem;
+    }
+
+    .hero p {
+        line-height: 1.75rem;
+        margin-top: 1.675rem;
+    }
+
+    .skills {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 1.5rem;
+        margin-top: 5rem;
+    }
+
+     .lower-skills {
+         flex-direction: column;
+    }
+
+    .skill-one {
+        width: 24.25rem;
+    }
+
+    .skill-two {
+        height: 11.375rem;
+        margin-top: 0;
+    }
+
+    .skill-three {
+        height: 11.375rem;
+        margin-top: 0;
+    }
+
+    .skill-four {
+        margin-top: 1.5rem;
+    }
+
+    .skill-five {
+        height: 11.375rem;
+        margin-top: 0;
+    }
+
+    .skill-six {
+        height: 11.375rem;
+        margin-top: 0;
+    }
+
+    .profile {
+        margin-top: 8.5rem;
+    }
+
+    .amy-image {
+        width: 22.75rem;
+        position: relative;
+        right: 0;
+
+    }
+
+    .profile-info {
+        text-align: left;
+    }
+
+    .profile-info h2 {
+        font-size: 2rem;
+        line-height: 2.52rem;
+    }
+
+    .profile-info p {
+        margin-block: 1.5rem;
+        font-size: 1.125rem;
+    }
+
+    .work {
+        margin-top: 5.5rem;
+    }
+
+    .work h3 {
+        font-size: 2rem;
+    }
+
+    .carousel {
+        margin-top: 1.5rem;
+        max-width: 33.75rem;
+    }
+
+    .arrow {
+        margin-top: 1.5rem;
+    }
+
+    .contact {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 4.5rem 4.0625rem;
+        margin-top: 5.5rem;
+        max-width: 62.5rem;
+    }
+
+    .contact-text {
+        text-align: left;
+        max-width: 33.75rem;
+    }
+
+    .contact h3 {
+        font-size: 2.5rem;
+    }
+
+    .contact p {
+        font-size: 1.125rem;
+    }
+
+    .btn-contact {
+        font-size: 1.625rem;
+    }
+
+    footer {
+        margin-top: 3.5rem;
+    }
 }
 
