--- a/css/style.css
+++ b/css/style.css
@@ -1,78 +1,83 @@
-@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
-/* Box sizing rates */
+/* Box sizing rules */
 *,
 *::before,
 *::after {
-    box-sizing: border-box; 
+  box-sizing: border-box;
 }
 
-/* CSS Reset */
+/* Remove default margin */
 body,
-h1, 
+h1,
 h2,
 h3,
 h4,
-h5,
-h6,
-figure, 
+p,
+figure,
 blockquote,
 dl,
 dd {
-   margin: 0; 
+  margin: 0;
 }
 
-ul[role="lists"],
-ol[role="lists"] {
-    list-style: none;
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role='list'],
+ol[role='list'] {
+  list-style: none;
 }
 
+/* Set core root defaults */
 html:focus-within {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
+/* Set core body defaults */
 body {
-    min-height: 100vh;
-    text-rendering: optimizeSpeed;
-    line-height: 1.5;
-    background: #fff7f0;
-    font-family: 'Plus Jakarta Sans', sans-serif;
-    font-size: 1rem;
-    margin: 1rem;
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+  background: #FFF7F0;
+  font-family: 'Plus Jakarta Sans', sans-serif;
+  font-size: 1rem;
+  margin: 1rem;
 }
 
+/* A elements that don't have a class get default styles */
 a:not([class]) {
-    text-decoration-skip-ink: auto;
+  text-decoration-skip-ink: auto;
 }
 
+/* Make images easier to work with */
 img,
 picture {
-    max-width: 100%;
-    display: block;
+  max-width: 100%;
+  display: block;
 }
 
+/* Inherit fonts for inputs and buttons */
 input,
 button,
 textarea,
 select {
-    font: inherit;
+  font: inherit;
 }
 
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
-    html:focus-within {
-        scroll-behavior: auto;
-    }
-
-    *,
-    *::before,
-    *::after {
-        animation-duration: 0.01ms !important;
-        animation-iteration-count: 1 !important;
-        transition-duration: 0.01ms !important;
-        scroll-behavior: auto !important;
-    } 
+  html:focus-within {
+   scroll-behavior: auto;
+  }
+  
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
 }
 
-main {
+main{
     margin: 0 auto;
 }
 
@@ -82,49 +87,50 @@ footer,
 .skills,
 .profile,
 .work,
-.contact {
+.contact{
     margin-inline: 1rem;
-    max-width: 21.4375rem;
+    max-width: 343px;
     margin: 0 auto;
 }
 
 header,
-footer {
+footer{
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
     padding-block: 1rem 2rem;
 }
 
-.btn {
+.btn{
     text-decoration: none;
     font-weight: 700;
-    color: #fff7f0;
-    padding: 0.5rem 1.6875rem;
+    color: #FFF7F0;
+    padding: .5rem 1.6875rem;
+    border-radius: 28px;
 }
 
 .btn-header,
-.btn-footer {
+.btn-footer{
     text-decoration: none;
     font-weight: 700;
-    color: #fff7f0;
-    padding: 0.5rem 1.6875rem;
+    color: #FFF7F0;
+    padding: .5rem 1.6875rem;
     background: #030303;
-    border-radius: 1.75rem;
+    border-radius: 28px;
 }
 
-.btn-header:focus,
-.btn-footer:focus {
-    background: #755cde;
+.btn-header:hover,
+.btn-footer:hover{
+    background: #755CDE;
     cursor: pointer;
 }
 
-.hero {
+.hero{
     text-align: center;
     margin: 0 auto;
 }
 
-.hero h1 {
+.hero h1{
     font-weight: 700;
     font-size: 2.25rem;
     line-height: 2.835rem;
@@ -132,353 +138,356 @@ footer {
     margin-top: 2rem;
 }
 
-.hero p {
+.hero p{
     font-weight: 500;
     line-height: 1.625rem;
     color: #7A746E;
     margin-top: 1rem;
 }
 
-.skill {
+.skill{
     position: relative;
     margin-top: 1.5rem;
-    border-radius: .5rem;
+    border-radius: 8px;
 }
 
-article img {
+article img{
     position: absolute;
     top: 1.5rem;
     right: 1.5rem;
 }
 
-.skills {
+.skills{
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 2.5rem;
 }
 
-.title {
+.title{
     position: absolute;
     bottom: 1.5rem;
     left: 1.5rem;
     font-weight: 700;
     font-size: 1.5rem;
     line-height: 1.89rem;
-    color: #fff;
+    color: #FFFFFF;
 }
 
-.skill-one {
-    background: #755cde;
-    height: 22.75rem;
-    width: 21.4375rem;
+.skill-one{
+    background: #755CDE;
+    height: 364px;
+    width: 343px;
 }
 
-.skill-two {
-    background: #f6a560;
-    height: 11.375rem;
-    width: 9.9375rem;
+.skill-two{
+    background: #F6A560;
+    height: 182px;
+    width: 159px;
 }
 
-.skill-three {
-    background: #f39e9e;
-    height: 9.9375rem;
-    width: 11.375rem;
+.skill-three{
+    background: #F39E9E;
+    width: 159px;
+    height: 182px;
 }
 
-.skill-four {
-    background: #eb7565;
-    height: 21.4375rem;
-    width: 9.875rem;
+.skill-four{
+    background: #EB7565;
+    width: 343px;
+    height: 158px;
 }
 
-.skill-five {
-    background: #61c4b7;
-    height: 21.4375rem;
-    width: 11.375rem;
+.skill-five{
+    background: #61C4B7;
+    width: 343px;
+    height: 182px;
 }
 
-.skill-six {
+.skill-six{
     background: #552049;
-    height: 21.4375rem;
-    width: 11.375rem;
+    width: 343px;
+    height: 182px;
 }
 
-.inner-skills {
+.inner-skills{
     display: flex;
-    gap: 1.5625rem;
+    gap: 25px;
 }
 
-.profile {
+.profile{
     margin-top: 6.25rem;
 }
 
-.amy-image {
-    width: 18.75rem;
+.amy-image{
+    width: 300px;
     display: block;
     margin: 0 auto;
 }
 
-.profile-info {
+.profile-info{
     margin-top: 2.5rem;
     text-align: center;
 }
 
-.profile-info h2 {
+.profile-info h2{
     font-weight: 700;
     font-size: 1.625rem;
     color: #030303;
 }
 
-.profile-info p {
+.profile-info p{
     margin-block: 2rem;
     font-weight: 500;
     color: #7A746E;
 }
 
 .btn-profile,
-.btn-contact {
-    background: #eb7565;
+.btn-contact{
+    background: #EB7565;
 }
 
 .btn-profile:hover,
-.btn-contact:hover {
-    background: #f6a560;
+.btn-contact:hover{
+    background: #F6A560;
+    cursor: pointer;
 }
 
-.work {
+.work{
+    text-align: center;
+    margin-top: 6.25rem;
+}
+
+.work h3{
     font-size: 1.5rem;
     font-weight: 700;
 }
 
-.carousel {
-    max-width: 16.875rem;
+.carousel{
+    max-width: 270px;
     position: relative;
     margin: 0 auto;
     margin-top: 2rem;
 }
 
-.carousel,
-.carousel-item,
-.carousel-item-hidden {
+.carousel .carousel-item,
+.carousel .carousel-item-hidden{
     display: none;
 }
 
-.carousel,
-.carousel-item-visible {
+.carousel .carousel-item-visible{
     display: block;
-    animation: fadeVisibility 0.5s ease-in-out;
+    animation: fadeVisibility .5s ease-in-out;
 }
 
-.carousel,
-.carousel-item img {
-    max-width: 37.5rem;
+.carousel .carousel-item img{
+    max-width: 600px;
     width: 100%;
     height: auto;
 }
 
-.carousel-item-hidden {
+.carousel-item-hidden{
     display: none;
 }
 
 @keyframes fadeVisibility {
-    0% {
+    0%{
         opacity: 0;
     }
-
-    100% {
+    100%{
         opacity: 1;
     }
 }
 
-.arrow {
-     background-color: #000;
-     padding: 1.5rem;
-     display: inline;
-     border-radius: 50%;
-     margin: 2rem 0.5rem 0 0.5rem;
+.arrow{
+    background-color: black;
+    padding: 1.5rem;
+    display: inline;
+    border-radius: 50%;
+    margin: 2rem .5rem 0 .5rem;
 }
 
-.arrow:hover {
-    background: #755cde;
+.arrow:hover{
+    background: #755CDE;
     cursor: pointer;
 }
 
-.contact {
+.contact{
     text-align: center;
     background: #030303;
-    border-radius: .625rem;
-    color: #fff7f0;
+    border-radius: 10px;
+    color: #FFF7F0;
     padding: 3rem 1.5rem;
     margin-top: 6.25rem;
 }
 
-.contact h3 {
-    font-size: 6.25rem;
+.contact h3{
+    font-size: 1.625rem;
 }
 
-.contact p {
+.contact p{
     padding-block: 1.5rem;
 }
 
-footer {
+footer{
     margin-top: 2.5rem;
 }
 
+/* MEDIA QUERIES */
 
-
-
-@media (min-width: 48rem) {
-    body {
+@media (min-width:768px) {
+    body{
         margin: 2.4375rem;
     }
 
     header,
     footer,
+    .hero,
     .skills,
     .profile,
     .work,
-    .contact {
+    .contact{
         margin: 0 auto;
-        max-width: 37.5rem;
+        max-width: 690px;
     }
 
-    .hero h1 {
+    .hero h1{
         font-size: 2.75rem;
         line-height: 3.465rem;
         margin-top: 4rem;
     }
-
-    .hero p {
+    
+    .hero p{
         font-size: 1.125rem;
         line-height: 1.75rem;
-        margin-top: 1.675rem;
+        margin-top: 1.6875rem;
     }
 
-    .skills {
+    .skills{
         margin-top: 5rem;
     }
 
     .upper-skills,
-    .lower-skills {
+    .lower-skills{
         display: flex;
         flex-direction: row;
         gap: 1.5rem;
     }
 
-    .skill-one {
-        width: 20.8125rem;
+    .skill-one{
+        width: 333px;
+    }
+    
+    .skill-two{
+        width: 155px;
+    }
+    
+    .skill-three{
+        width: 155px;
+    }
+    
+    .skill-four{
+        width: 333px;
+    }
+    
+    .skill-five{
+        width: 333px;
+    }
+    
+    .skill-six{
+        width: 333px;
     }
 
-    .skill-two {
-        width: 9.6875rem;
-    }
-
-    .skill-three {
-        width: 9.6875rem;
-    }
-
-    .skill-four {
-        width: 20.8125rem;
-    }
-
-    .skill-five {
-        width: 20.8125rem;
-    }
-
-    .skill-six {
-        width: 20.8125rem;
-    }
-
-    .profile {
+    .profile{
         display: flex;
         gap: 2.3rem;
         margin-top: 7.5rem;
     }
 
-    .amy-image {
-        width: 22.75rem;
+    .amy-image{
+        width: 364px;
         position: relative;
-        right: 6.25rem;
+        right: 100px;
     }
 
-    .profile-info {
+    .profile-info{
         text-align: left;
     }
 
-    .profile-info h2 {
+    .profile-info h2{
         font-size: 2rem;
         line-height: 2.52rem;
     }
-
-    .profile-info p {
+    
+    .profile-info p{
         margin-block: 1.5rem;
         font-size: 1.125rem;
     }
 
-    .work {
+    .work{
         margin-top: 7.5rem;
     }
 
-    .work h3 {
+    .work h3{
         font-size: 2rem;
     }
 
-    .carousel {
-        margin-top: 1.5rem;
-        max-width: 33.75rem;
+    .carousel{
+        margin-top: 3.5rem;
+        max-width: 540px;
     }
 
-    .arrow {
-        margin-top: 1.5rem;
+    .arrow{
+        margin-top: 3.5rem;
     }
 
-    .contact {
+    .contact{
         padding: 3.5rem 4.6875rem;
         margin-top: 7.5rem;
     }
 
-    .contact h3 {
+    .contact h3{
         font-size: 2rem;
     }
-
-    .contact p {
+    
+    .contact p{
         font-size: 1.125rem;
     }
 
-    .btn-contact {
-        font-size: 1.625rem;
+    .btn-contact{
+        margin-top: 1.625rem;
     }
 
-    footer {
+    footer{
         margin-top: 3.5rem;
     }
 }
 
-@media (min-width: 75rem) {
+@media (min-width:1200px) {
     header,
     footer,
+    .hero,
     .skills,
     .profile,
     .work,
-    .contact {
+    .contact{
         margin-inline: 10.3125rem;
+        max-width: 1000px;
         margin: 0 auto;
-        max-width: 62.5rem;
     }
 
-    .hero h1 {
+    .hero h1{
         font-size: 3.5rem;
         line-height: 4.41rem;
         margin-top: 4.125rem;
     }
-
-    .hero p {
+    
+    .hero p{
         line-height: 1.75rem;
-        margin-top: 1.675rem;
+        margin-top: 1.6875rem;
     }
 
-    .skills {
+    .skills{
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -486,108 +495,64 @@ footer {
         margin-top: 5rem;
     }
 
-     .lower-skills {
-         flex-direction: column;
+    .lower-skills{
+        flex-direction: column;
     }
 
-    .skill-one {
-        width: 24.25rem;
-    }
-
-    .skill-two {
-        height: 11.375rem;
+    .skill-one{
+        height: 388px;
         margin-top: 0;
     }
 
-    .skill-three {
-        height: 11.375rem;
+    .skill-two,
+    .skill-three,
+    .skill-four,
+    .skill-five,
+    .skill-six{
+        height: 182px;
         margin-top: 0;
     }
 
-    .skill-four {
+    .skill-four{
         margin-top: 1.5rem;
     }
 
-    .skill-five {
-        height: 11.375rem;
-        margin-top: 0;
-    }
-
-    .skill-six {
-        height: 11.375rem;
-        margin-top: 0;
-    }
-
-    .profile {
+    .profile{
         margin-top: 8.5rem;
     }
 
-    .amy-image {
-        width: 22.75rem;
+    .amy-image{
+        width: 364px;
         position: relative;
-        right: 0;
-
+        right: 0px;
+        width: 300px;
+        display: block;
+        margin: 0 auto;
     }
 
-    .profile-info {
-        text-align: left;
-    }
-
-    .profile-info h2 {
-        font-size: 2rem;
-        line-height: 2.52rem;
-    }
-
-    .profile-info p {
-        margin-block: 1.5rem;
-        font-size: 1.125rem;
-    }
-
-    .work {
+    .work{
         margin-top: 5.5rem;
     }
 
-    .work h3 {
-        font-size: 2rem;
-    }
-
-    .carousel {
-        margin-top: 1.5rem;
-        max-width: 33.75rem;
-    }
-
-    .arrow {
-        margin-top: 1.5rem;
-    }
-
-    .contact {
+    .contact{
         display: flex;
         align-items: center;
         justify-content: space-between;
         padding: 4.5rem 4.0625rem;
+        max-width: 1000px;
         margin-top: 5.5rem;
-        max-width: 62.5rem;
     }
 
-    .contact-text {
+    .contact-text{
         text-align: left;
-        max-width: 33.75rem;
+        max-width: 540px;
     }
 
-    .contact h3 {
+    .contact h3{
         font-size: 2.5rem;
     }
 
-    .contact p {
-        font-size: 1.125rem;
-    }
-
-    .btn-contact {
-        font-size: 1.625rem;
-    }
-
-    footer {
+    footer{
         margin-top: 3.5rem;
     }
 }
-
